--- a/transformer/src/main/app/mule-deploy.properties
+++ b/transformer/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Sep 25 17:56:55 EDT 2018
+#Wed Sep 26 14:51:44 EDT 2018
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=complex-transformer.xml,complextransformer2.xml,transformer.xml
 domain=default
-config.resources=complex-transformer.xml,transformer.xml
